introducing shelly cloud hosting.

--- a/sinatra/views/index.haml
+++ b/sinatra/views/index.haml
@@ -4,8 +4,8 @@
     %title Rat Pack
     %link(rel="stylesheet" type="text/css" href="stylesheets/style.css")
     %script(src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js")
-    %script(src="javascripts/main.js")
-    %script{src: "/faye/client.js"}    
+    %script(src="faye/client.js")
+    %script{src: "javascripts/main.js"}
   %body
     .container
       .content
